--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,5 @@
-version: '3.8'
 
 services:
-  ## MongoDB for user service
   mongodb:
     image: mongo:latest
     container_name: mongodb
@@ -11,7 +9,6 @@ services:
     volumes:
       - mongodb_data:/data/db
 
-  ## Apache Zookeeper for Kafka
   zookeeper:
     image: wurstmeister/zookeeper
     container_name: zookeeper
@@ -19,7 +16,6 @@ services:
     ports:
       - "2181:2181"
 
-  ## Kafka for event streaming
   kafka:
     image: wurstmeister/kafka
     container_name: kafka
@@ -35,7 +31,6 @@ services:
     depends_on:
       - zookeeper
 
-  ## Your Node.js Application (Express + GraphQL + Kafka)
   app:
     build: .
     container_name: express-graphql-kafka
@@ -54,91 +49,40 @@ services:
       - .:/app
       - /app/node_modules
 
-  ## PostgreSQL for Kong Gateway (Upgraded to 13)
   kong-database:
-    image: postgres:13
+    image: postgres:11
     container_name: kong-database
-    restart: always
     environment:
       POSTGRES_USER: kong
       POSTGRES_DB: kong
       POSTGRES_PASSWORD: kong
+    restart: always
     volumes:
-      - kong_db_data:/var/lib/postgresql/data
-
-  ## Kong API Gateway with auto migrations
-  kong-migrations:
-    image: kong/kong-gateway:latest
-    container_name: kong-migrations
-    restart: on-failure
-    depends_on:
-      - kong-database
-    command: kong migrations bootstrap
-    environment:
-      KONG_DATABASE: postgres
-      KONG_PG_HOST: kong-database
-      KONG_PG_USER: kong
-      KONG_PG_PASSWORD: kong
+      - kong_data:/var/lib/postgresql/data
 
   kong:
     image: kong/kong-gateway:latest
     container_name: kong
-    restart: always
     depends_on:
-      - kong-migrations
+      - kong-database
     environment:
       KONG_DATABASE: postgres
       KONG_PG_HOST: kong-database
       KONG_PG_USER: kong
       KONG_PG_PASSWORD: kong
       KONG_ADMIN_LISTEN: 0.0.0.0:8001
-      KONG_PROXY_LISTEN: 0.0.0.0:8000
-      KONG_PROXY_ACCESS_LOG: /dev/stdout
-      KONG_ADMIN_ACCESS_LOG: /dev/stdout
-      KONG_PROXY_ERROR_LOG: /dev/stderr
-      KONG_ADMIN_ERROR_LOG: /dev/stderr
-      KONG_ADMIN_GUI_LISTEN: 0.0.0.0:8002
-      KONG_CORS_ORIGIN: '*'
+      KONG_PROXY_LISTEN: "0.0.0.0:8000, 0.0.0.0:8443 ssl"
+      KONG_PLUGINS: bundled,cors
     ports:
       - "8000:8000"
       - "8443:8443"
       - "8001:8001"
       - "8444:8444"
-
-  ## Konga Admin Panel with Database Migration
-  konga-prepare:
-    image: pantsel/konga
-    container_name: konga-prepare
-    depends_on:
-      - kong
-    command: sh -c "sleep 5 && konga --migrate"
-    environment:
-      DB_ADAPTER: postgres
-      DB_HOST: kong-database
-      DB_USER: kong
-      DB_PASSWORD: kong
-      DB_DATABASE: kong
-      NODE_ENV: production
-
-  ## Konga Admin Dashboard
-  konga:
-    image: pantsel/konga
-    container_name: konga
     restart: always
-    depends_on:
-      - konga-prepare
-    environment:
-      DB_ADAPTER: postgres
-      DB_HOST: kong-database
-      DB_USER: kong
-      DB_PASSWORD: kong
-      DB_DATABASE: kong
-      NODE_ENV: production
-    ports:
-      - "1337:1337"
+    command: ["/bin/sh", "-c", "kong migrations bootstrap && kong start"]
 
 volumes:
   mongodb_data:
     driver: local
-  kong_db_data:
+  kong_data:
     driver: local
